# lemma

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  fly.toml  rust-toolchain.toml
apps/: Cargo.toml
contracts/: Lemma.sol
core/: Cargo.toml
core/src/: lib.rs
frontend/: Dockerfile  fly.toml  index.html  package-lock.json  package.json
frontend/src/: App.tsx  bonsai.ts  index.css  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx  ProofProgress.tsx  SubmitTheorem.tsx  TheoremDetail.tsx  TheoremList.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/providers/: TheoremProvider.tsx
interfaces/: ILemma.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
relay/: .gitignore  Cargo.toml  Dockerfile
relay/src/: configuration.rs  main.rs
script/: Deploy.s.sol  quick.sh
tests/: Lemma.sol  Lemma.t.sol
