[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
config = "0.14"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
color-eyre = "0.6"
lemma-core = { path = "../core", package = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = {version = "0.5", features = ["full", "cors"] }
