[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
lean-sys = { version = "0.0.7", default-features = false, features = [
    "extern",
    "small_allocator",
] }

[profile.release]
lto = "thin"
