[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
serde = { version = "1", features = ["derive"] }
# proost = { git = "https://github.com/asm-nop/proost.git" }
# parser = { git = "https://github.com/asm-nop/proost.git" }

[profile.release]
lto = "thin"
