[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lemma"
path = "src/bin/lemma.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
core = { path = "../../core" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
mini-proost = { git = "https://github.com/asm-nop/proost.git" }
parser = { git = "https://github.com/asm-nop/proost.git" }

[profile.release]
lto = "thin"
